--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: java
 jdk:
   - openjdk11
-script:
-  - mvn clean install
+install:
+  - chmod +x mvnw
 cache:
   directories:
     - $HOME/.m2
